2006-01-23 Ales Hvezda   <ahvezda@geda.seul.org>

        * po/*: auto* tools update all po files for distribution.

2006-01-22 Ales Hvezda   <ahvezda@geda.seul.org>

        * autogen.sh, m4/guile.m4, m4/gettext.m4, src/Makefile.am: Removed 
	m4 files since they are installation specifc.  Also, all required
	libraries should be coming from LIBGEDA_LDFLAGS

	* po/it_IT.po: Updated to the latest version from Michele Petrecca.
	Thanks.

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Bumped package version to 20060123

	* noweb/x_fileselect.nw: Changed button order to be Open/Cancel and
	Save/Cancel.  This is so that the application's dialog boxes are
	consistent everywhere.

        * README: Updated for the new year and release.

2006-01-13 Carlos Nieves Onega <cnieves@iespana.es>	
	* po/es_ES.po: Updated the spanish translation.
	
2006-01-12  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* po/fr_FR.po: Updated the French translation.

	* po/*: Updated and merged i18n files.
	
	* noweb/rcstrings.nw: Rebuilt file from latest system-gschemrc.

2006-01-11  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* po/fr_FR.po: Updated the French translation.
	
	* po/*: Updated and merged i18n files.
	
	* noweb/i_callbacks.nw, noweb/o_misc.nw, noweb/o_picture.nw:
	* noweb/o_text.nw, noweb/x_image.nw, noweb/x_preview.nw:
	Added missing marks for gettext on log messages.
	
	* noweb/x_dialog.nw, noweb/x_menus.nw:
	* noweb/x_multiattrib.nw, noweb/x_pagesel.nw: Marked strings in
	structures (popup menus and option menus) for i18n with N_().

	* include/globals.h: Introduced macro N_() as short for
	gettext_noop().

2006-01-07  Stuart Brorson  <sdb AT cloud9 DOT net>
        * autogen.sh, Included "-I m4" into
        aclocal to pick up macros from local m4 dir.
	
	*  src/Makefile.am:  Added @GUILE_LDFLAGS@ to gschem_LDADD
	to force pick-up of lguile.
	
2006-01-07  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* po/fr_FR.po: Updated the French translation.
