@@ -2,6 +2,9 @@
 
         * po/*: auto* tools update all po files for distribution.
 
+	* src/Makefile.am (and the toplevel Makefile): Applied build
+	patch by Matthias Wenzel.  Thanks.
+
 2006-01-22 Ales Hvezda   <ahvezda@geda.seul.org>
 
         * autogen.sh, m4/guile.m4, m4/gettext.m4, src/Makefile.am: Removed 
